@@ -173,7 +173,7 @@ class News_Boursorama(object):
                 print 'unable to connect'
             return
 
-        title = re.search('<tr>[ \t\n\r]+<td.*</td>[ \t\n\r]+</tr>',buf,re.IGNORECASE|re.MULTILINE|re.DOTALL)
+        title = re.search('<tr>[ \t\n\r]+<td.*</font></td>[ \t\n\r]+</tr>',buf,re.IGNORECASE|re.MULTILINE|re.DOTALL)
         if title:
             title = title.group()
         else:
@@ -182,6 +182,9 @@ class News_Boursorama(object):
         buf = re.search('<tr>[ \t\n\r]*<td>.*</table>',buf,re.IGNORECASE|re.MULTILINE|re.DOTALL)
         if buf:
             buf = buf.group()[:-8]
+            #print '----------------('
+            #print buf
+            #print ')----------------'
             page = "<html><body>" + "<br><a href=':back'>%s</a><H3>" % message('backtolist') + title + "</H3>" + buf + "<br><br><a href=':back'>%s</a>" % message('backtolist')  + "</body></html>"
 
             if html:
