@@ -6,6 +6,7 @@ On the road for v0.4.8 (Nausicaa2)
 ===============================================================================
 
 2006-12-12  Gilles Dumortier <dgil at ieee.org>
+	* News : Boursorama News provider was buggy (SF bug 1612349)
 	* News : saving the cache with non ASCII char (SF bug 1613121) / UTF8
 	* Fix list of portfolio files when using a specific usrdata/ folder
 
